--- a/package.json
+++ b/package.json
@@ -19,5 +19,21 @@
   "bugs": {
     "url": "https://github.com/Masterprocess/VinumVitae/issues"
   },
-  "homepage": "https://github.com/Masterprocess/VinumVitae#readme"
+  "homepage": "https://github.com/Masterprocess/VinumVitae#readme",
+  "dependencies": {
+    "bcrypt-node": "^0.1.0",
+    "body-parser": "^1.17.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.4",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.5",
+    "express-ws": "^3.0.0",
+    "method-override": "^2.3.9",
+    "mysql2": "^1.4.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^4.8.0",
+    "ws": "^3.1.0"
+  }
 }
