--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bcrypt-node": "^0.1.0",
     "body-parser": "^1.17.2",
+    "brewerydb-node": "0.0.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.4",
