--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "sequelize": "^4.8.3",
     "sequelize-fixtures": "^0.6.0",
     "ws": "^3.1.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^3.5.3"
   }
 }
